Migrate users of Optional.get()
Upgraded modernizer points out callers of Optional.get(), which has a
better-named replacement in Optional.orElseThrow(). Migrate callers to
orElseThrow() or alternative facilities.

Change-Id: Ic36876b32443d341b3e838a9bb1dd079ea141b42
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit 24021a352f7cec01ff2280d55e18b256cd34a2a0)